Decision Making and icon changed day 10 NWU

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,17 +10,24 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity android:name=".MainActivity">
+            <!--<intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>-->
+        </activity>
+        <activity
+            android:name=".SecondActivity"
+            android:label="Second Activity"
+            android:screenOrientation="portrait"
+            android:theme="@style/AppThemeTwo" />
+        <activity android:name=".DecisionActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity
-            android:name=".SecondActivity"
-            android:label="Second Activity"
-            android:screenOrientation="portrait"
-            android:theme="@style/AppThemeTwo"></activity>
     </application>
 
 </manifest>
